--- a/Java/七.集合框架.md
+++ b/Java/七.集合框架.md
@@ -12,9 +12,12 @@
   - List代表有序、重复的集合
   - Map则代表具有映射关系的集合
   - Queue体系集合，代表一种队列集合实现
+  - Stack代表先进后出的集合
 
 - 各类的特点
 
+  - Array通常比Link list更高效；Link list容量是动态的，Array容量是固定的；
+  
   ![](assets/9.2集合框架特点.jpg)
 
 ### 1.2 Collection接口
@@ -25,8 +28,24 @@
 
   ```java
   public interface Collection<E>{
+    // Basic Operations
+    int size();
+    boolean isEmpty();
+    boolean contains(Object element);
     boolean add(E element); // 添加元素
+    boolean remove(Object element); //形参和add方法不一样。比如remove方法在hashmap中，是传入key值，而key值不一定是E类型的，可能是任意类型的，所以此处使用Object对象。
     Iterator<E> iterator(); // 返回实现Iterator接口的对象，可使用该对象遍历集合中的元素
+    
+    // Bulk Operations
+    boolean containsAll(Collection<?> c);
+    boolean addAll(Collection<? extends E> c);
+    boolean removeAll(Collection<?> c);
+    boolean retainAll(Collection<?> c);
+    void clean(); //Optional
+    
+    // Array Operations
+    Object[] toArray();
+    <E> E[] toArray(E a[]);
   }
   ```
 
@@ -79,8 +98,6 @@
   }
   ```
 
-  
-
 - 注意
 
   - Java迭代器位于两个元素之间，调用next时，越过下个元素，并返回刚刚越过的元素
@@ -88,6 +105,40 @@
     ![](assets/9.迭代器移动指针.jpg)
 
   - next方法和remove方法互相依赖。使用remove前需要先调用next，因此无法连续调用remove方法删除两个相邻的元素。原因如上
+  
+  - 使用for-each方法，底层调用的是迭代器。并且无法修改值。
+  
+    ```java
+    List<String> list = new ArrayList<>();
+    list.add("a");
+    list.add("b");
+    list.add("c");
+    // 尝试修改list中的值
+    for (String s : list) {
+      s = "y";
+    }
+    // 使用set修改值
+    list.set(2, "y");
+    // 输出修改之后的list
+    for (String s : list) {
+      System.out.println(s);
+    }
+    ```
+  
+    ```shell
+    # output
+    a
+    b
+    y
+    ```
+  
+    ```shell
+    # Analyse
+    1.使用for-each遍历修改之后，并没有修改值。
+    2.需要使用set方法来修改值。
+    ```
+  
+    
 
 ### 1.5 集合框架中的接口
 
@@ -114,14 +165,93 @@
   | WeakHashMap     | 其值无用后支持被垃圾回收器回收的映射表     |
   | IdentityHashMap | 用== 而不是equals比较键值的映射表          |
 
-### 2.1 链表
+### 2.0 栈
+
+- 特点
+
+  - 后进先出，元素只能从顶部加入，从顶部离开
+
+- 方法
+
+  - push(T object)：在栈顶部压入元素
+  - pop()：返回栈顶部的元素
+  - size()：返回栈的大小
+
+- Implementation 
+
+  ```java
+  public class Stack {
+      public static void main(String[] args) {
+          java.util.Stack<String> stack = new java.util.Stack<>();
+          stack.push("First");
+          stack.push("Second");
+          stack.push("Third");
+          System.out.println("The order of add : First,Second,Third");
+          System.out.println("The first pop:" + stack.pop());
+          System.out.println("The second pop:" + stack.pop());
+          System.out.println("The third pop:" + stack.pop());
+      }
+  }
+  ```
+
+  ```shell
+  # output
+  The order of add : First,Second,Third
+  The first pop:Third
+  The second pop:Second
+  The third pop:First
+  ```
+
+### 2.1 List
+
+- 特点
+
+  - 可包含重复项
+  - 也可称为sequences
+
+- 方法
+
+  ```java
+  public interface List<T> extends Collection<T> { 
+    T get(int index);
+    T set(int index, T element);
+    void add(int index, T element);
+    T remove(int index);
+    boolean addAll(int index, Collection <? extends T> c);
+    // Search
+  	int indexOf(Object o); 
+  	int lastIndexOf(Object o);
+    // Iterator
+    ListIterator<T> listIterator(); 
+  	ListIterator<T> listIterator(int indexb);
+    List<T> subList(int from, int to); 
+  }
+  ```
+
+- implementations
+
+  - ArrayList
+  - LinkedList
+  - Vector
 
 #### 1.LinkedList
 
 - 特点
 
+  - 适合在列表中间增加或删除元素
+
   - 同时实现了List接口和Deque接口
-  - 非线程安全，不同步 <!--如果需要实现同步，通过Collections.synchronizedList()方法对其进行包装-->
+
+  - 非线程安全，不同步
+
+     <!--如果需要实现同步，通过Collections.synchronizedList()方法对其进行包装-->
+
+- 复杂度
+
+  - get() 获取第几个元素，依次遍历，复杂度O(n)
+  - add(E) 添加到末尾，复杂度O(1)
+  - add(index, E) 添加第几个元素后，需要先查找到第几个元素，直接指针指向操作，复杂度O(n)
+  - remove（）删除元素，直接指针指向操作，复杂度O(1)
 
 - 结构：双向链表
 
@@ -318,17 +448,25 @@
 
   ![](assets/9.2.1链表迭代器定位.png)
 
-### 2.2 数组列表
-
-#### 1.ArrayList
+#### 3.ArrayList
 
 - 特点
 
+  - 适合在尾端插入和删除元素
+  - 适合通过index访问元素
   - 实现了List接口
   - 非线程安全
   - 顺序容器（元素存放的顺序与放进去的顺序一致），因为底层是数组
   - 容量不足，容器会自动增大底层数组的大小
   - 允许元素为null
+
+- 时间复杂度
+
+  - get() 获取第几个元素，依次遍历，复杂度O(1)
+  - add(E) 添加到末尾，复杂度O(1)
+  - add(index, E) 添加元素，在第几个元素后面插入，后面的元素需要向后移动，复杂度O(n）
+  - remove（）删除元素，后面的元素需要逐个移动，复杂度O（n）
+  - 因此一般不进行在中间的添加和删除操作
 
 - 方法
 
@@ -347,20 +485,19 @@
     ```
 
     <!--解析-->
+    
+    底层实现是数组，同时无法对在数组外的位置赋值
 
-  1. 底层实现是数组，同时无法对在数组外的位置赋值
+  - get( )：获取指定位置的元素
 
-- get( )：获取指定位置的元素
+    <!--源码-->
 
-  <!--源码-->
-
-  ```java
-    public E get(int index) {
-            Objects.checkIndex(index, size); // 越界检查
-            return elementData(index);
-        }
-  
-  ```
+    ```java
+      public E get(int index) {
+              Objects.checkIndex(index, size); // 越界检查
+              return elementData(index);
+          }
+    ```
 
   - add( )：向指定位置添加元素
 
@@ -503,8 +640,29 @@
     <!--解析-->
 
     1. fastRemove方法中，因为被删除元素后的元素都向前移动一个位置，因此最后的元素需要赋值为null，让GC进行回收处理
+    
+  - 遍历
 
-#### 2.ArrayList与Vector区别
+    ```java
+    // 方法一：使用索引
+    System.out.println("方法一：使用索引");
+    for (int i = 0 ; i < list.size() ; i++) {
+      System.out.println(list.get(i));
+    }
+    // 方法二：使用迭代器
+    System.out.println("方法二：使用迭代器");
+    ListIterator<String> iterator = list.listIterator();
+    while (iterator.hasNext()){
+      System.out.println(iterator.next());
+    }
+    // 方法三：隐式使用迭代器
+    System.out.println("方法三：隐式使用迭代器");
+    for (String s : list) {
+      System.out.println(s);
+    }
+    ```
+
+#### 4.ArrayList与Vector区别
 
 - Vector是线程安全的集合类，ArrayList并不是线程安全的类。Vector类对集合的元素操作时都加了synchronized，所以方法都是同步的，保证线程安全。
 - Vector与ArrayList本质上都是一个Object[] 数组，ArrayList提供了size属性，Vector提供了elementCount属性，他们的作用是记录集合内有效元素的个数。与我们平常调用的arrayList.size()和vector.size()一样返回的集合内有效元素的个数。
