--- a/Java/八.泛型程序设计.md
+++ b/Java/八.泛型程序设计.md
@@ -15,6 +15,8 @@
 
   - T（需要时还可以用临近的字母U，S）表示任意类型。  
 
+    <!--T在编译之后就是Object-->
+
   - E表示集合的元素类型。如List<E> list 表示 list 里的元素。
 
   - K，V分别表示表的关键字与值的类型。
@@ -25,6 +27,21 @@
     泛型类型：Pair<T>
     实例化泛型类型：Pair<String>
     ```
+    
+  - you cannot instantiate an array whose base type is a type parameter. 
+
+    ```
+    T vals[]; // This is OK, but...
+    vals = new T[10]; // You can’t do this!
+    ```
+
+  - Cannot create an array of type-specific generic references.
+
+    ```
+    Gen<Integer> gens[] = new Gen<Integer>[10];
+    ```
+
+  - 如果已经定义是泛型类，比如“Pair<T extends Number>”，则类中的方法的传入参数可以使用Pair<?>表示，因为传入的参数一定符合"T extends Number"
 
 - Implementation
 
