--- a/Java/四.复用类.md
+++ b/Java/四.复用类.md
@@ -205,7 +205,7 @@ class Super{}
   Cartoon Constructor:11
     */
     ```
-    
+  
 - 子类的构造函数第一行也能通过this来访问本类中的构造函数，但是必定有本类中的构造函数会访问父类的构造函数。同时this和super都必须在第一行
 
   ```java
@@ -1402,7 +1402,25 @@ class Super{}
   }
   ```
 
-### 
+## 10.递归
+
+- Definition: one which refers to itself.
+
+- Types
+
+  - Direct recursion: Method m() contains a call to m() in its body.
+  - Indirect recursion: Method m() contains a call to a method n() which itself contains a call to m() in its body.
+
+- Component
+
+  - At least one stopping condition.
+  - At least one recursive part.
+
+- Notation
+
+  - 高效的运行，可能需要高存储，所以需要权衡。
+
+    <!--斐波那契数列使用递归，每个方法调用了两次递归，会使得效率很低，最好不使用递归实现。-->
 
 
 
