--- a/Neural Network/11.自然语言的神经网络.md
+++ b/Neural Network/11.自然语言的神经网络.md
@@ -1,3 +1,5 @@
+> fix
+
 # 11.自然语言的神经网络
 
 - NLP的任务
@@ -330,19 +332,14 @@ Target_dataset 所有评分:[1, 0]
 
   ```shell
   # output
-  len of vocab:74074
-  len of input_dataset:25000
-  Iter:0 Progress:95.99% Training Accuracy:0.8334166666666667%
-  Iter:1 Progress:95.99% Training Accuracy:0.8663333333333333%
-  Test Accuracy:0.85
   [('terrible', -0.0), ('annoying', -0.7932396390575799), ('fails', -0.798839607084677), ('poor', -0.8114133039803418), ('mess', -0.844447497259539), ('horrible', -0.844878306793313), ('dull', -0.8458943998490457), ('lame', -0.8480644537284596), ('avoid', -0.852650392755622), ('boring', -0.8600860550633572)]
   ```
-
+  
   ```python
   import numpy as np
   import sys, math
   from collections import Counter
-  
+
   ## 1.Preparation
   # 1.1 Read reviews and labels
   f = open("reviews.txt")
@@ -440,9 +437,190 @@ Target_dataset 所有评分:[1, 0]
           correct += 1
       total += 1
   print("Test Accuracy:" + str(correct / float(total)))
+  ```
+  
+
+### 完形填空——Important!!!
+
+- Requirements：将文本划分成5个单词一组的短语，删除一个重点词汇，尝试训练网络，利用去掉单词之后的剩余部分来预测去掉的单词。
+
+- Implementation
+
+  ```python
+  import numpy as np
+  import sys, math, random
+  from collections import Counter
+  
+  ## Preparation
+  np.random.seed(1)
+  random.seed(1)
+  f = open("reviews.txt")
+  raw_reviews = f.readlines()
+  f.close()
+  
+  tokens = list(map(lambda x: x.split(" "), raw_reviews))  
+  wordcnt = Counter()
+  for sent in tokens:
+      for word in sent:
+          wordcnt[word] -= 1  
+          # 将每个单词出现一次就减去1次，到最后出现次数越多，数字越小。因为wordcnt中没有单词，所以每个单词的初始次数都是0。比如单词"can"，初始值为0，出现一次后就为-1，再次出现，则为-2，即使是在不同的sent中出现。
+  vocab = list(set(map(lambda x: x[0], wordcnt.most_common())))
+  # 因为返回值是x[0],所以返回的是单词，也就是将所有的单词加入vocab中。如果是x[1]，则返回的是统计次数。
+  
+  word2index = {}
+  for i, word in enumerate(vocab):
+      word2index[word] = i
+  
+  concatenated = list()
+  input_dataset = list()
+  for sent in tokens:
+      sent_indices = list()
+      for word in sent:
+          try:
+              sent_indices.append(word2index[word])
+              concatenated.append(word2index[word])
+              # 所有的单词的索引都放在一个list中,一共有7459318个词
+          except:
+              ""
+      input_dataset.append(sent_indices)
+  concatenated = np.array(concatenated)  # 将list转换为array;(7459318,)
+  random.shuffle(input_dataset)  
+  # 随机打乱input_dataset中的数据顺序。比如二维数组，只打乱第一维的顺序。
+  
+  ## Basic parameters and methods
+  alpha, iterations = (0.05, 2)
+  hidden_size, window, negative = (50, 2, 5)  
+  # negative是5，因为自定义5个单词为一组。window为2，用途是选择被预测单词的前后各两项。
+  
+  weights_0_1 = (np.random.rand(len(vocab), hidden_size) - 0.5) * 0.2  # (74075,50)
+  weights_1_2 = np.random.rand(len(vocab), hidden_size) * 0  # (74075,50)，元素都为零
+  
+  layer_2_target = np.zeros(negative + 1)  # [0. 0. 0. 0. 0. 0.]
+  layer_2_target[0] = 1  # [1. 0. 0. 0. 0. 0.]
+  # 因为被预测的单词的位置都是放在target_samples的第一位，所以对应的目标结果（layer_2_target）的第一位就是1，表示答案就是layer_2_target！
   
   
+  # 输出10个beautiful的近似词；该方法用来查看在完成完形填空之后，查找近义词的变化。
+  def similar(target="beautiful"):
+      target_index = word2index[target]
+  
+      scores = Counter()
+      for word, index in word2index.items():
+          raw_difference = weights_0_1[index] - weights_0_1[target_index]
+          squared_difference = raw_difference * raw_difference
+          scores[word] = -math.sqrt(sum(squared_difference))
+      return scores.most_common(10)
+  
+  
+  def sigmoid(x):
+      return 1 / (1 + np.exp(-x))
+  
+  
+  # Training
+  for rev_i, review in enumerate(input_dataset * iterations):
+  # rev_i用来表示每条review的索引；input_dataset * iterations的值是两个input_dataset的list
+      for target_i in range(len(review)):
+      # target_i表示被预测的单词的索引!
+          target_samples = [review[target_i]]+list(concatenated[(np.random.rand(negative) * len(concatenated)).astype('int').tolist()])
+        # 见Analyse
+          left_context = review[max(0, target_i - window):target_i]   
+          # 取索引是target_i的左边相邻的单词。
+          right_context = review[target_i + 1:min(len(review), target_i + window)]    
+          # 取索引是target_i的右边相邻的单词；如果target_i是5，则左边取3个单词，右边取2个单词。
+          
+          layer_1 = np.mean(weights_0_1[left_context + right_context], axis=0)    
+          # 取被预测单词的左边右边共五个元素所对应的weights_0_1权重，然后垂直相加，作为输入层。因为layer_0是1和0的向量，和权重矩阵相乘，就是矩阵对应列的值做加法。 (50,)
+          layer_2 = sigmoid(layer_1.dot(weights_1_2[target_samples].T))
+          # 见Analyse
+          
+          layer_2_delta = layer_2 - layer_2_target
+          layer_1_delta = layer_2_delta.dot(weights_1_2[target_samples])
+  
+          weights_0_1[left_context + right_context] -= layer_1_delta * alpha
+          weights_1_2[target_samples] -= np.outer(layer_2_delta, layer_1) * alpha
+  
+      if rev_i % 250 == 0:
+          sys.stdout.write(
+              '\rProgress:' + str(rev_i / float(len(input_dataset) * iterations)) + "   " + str(
+                  similar('terrible')))
+          sys.stdout.write('\rProgress:' + str(rev_i / float(len(input_dataset) * iterations)))
+  
+  print(similar('terrible'))
   ```
 
-  
+  ```shell
+  # Analyse
+  1. "target_samples = [review[target_i]]+list(concatenated[(np.random.rand(negative) * len(concatenated)).astype('int').tolist()])"
+  	1."target_samples"是为了每次只预测一个随机子集。如果对每一个单词都进行预测，代价过高。比如为了预测缺少的是哪个单词，需要对每一个可能的单词添加标签，代价过大，因此每次正向传播都随机忽略大多数标签，就预测一个子集。
+  	2."[review[target_i]]"就是取到了删去的单词。之所以放在target_samples的第一位，就是对应了layer_2_target[0]的位置。
+  	3."np.random.rand(negative) * len(concatenated)"是为了能够覆盖到所有评论的单词，并选出5个。"astype('int')"是将五个值都变成int类型，作为索引，在concatenated中取值。
+  	4.最后将选中的值和随机的五个值组合成一个list()
+  2."layer_2 = sigmoid(layer_1.dot(weights_1_2[target_samples].T))"
+  	1."weights_1_2"是零的矩阵，因此"layer_1.dot(weights_1_2[target_samples].T)"的结果在第一次迭代时为零，经过"sigmoid()"激活函数后是0.5的向量。
+  	2.[1,50] * [50,6] = [1,6] 也就是(6,)
+  	3."weights_1_2[target_samples]"中是"target_samples"的原因是，你预测的目标是"target_samples",所以乘以对应的权重。比如layer_0求layer_1的时候，weights_0_1的值就是layer_1所对应的列！！！
+  ```
 
+### 小结
+
+- 电影评论和完形填空比较
+  - 预测电影评论和完形填空之后，查找beautiful的近义词的结果不相同。电影评论时，单词将根据预测是正面还是负面的标签的可能性聚集在一起。完形填空将基于同一个短语中出现的可能性聚集在一起。也称为“智能定位”。
+
+## 11.13 Loss Function
+
+- Formula
+
+  <!--目前只使用这一种损失函数。逻辑回归的损失函数可以见讲义-->
+
+  ```
+  error = ((0.5 * weights) - 0.8) ** 2
+  ```
+
+- Rules
+
+  - 误差函数的不同，将导致每个网络中单词聚集的方式不同。
+
+    <!--比如电影评论和完形填空，两个网络架构相似，数据集相同，由于学习目标值的不同，导致误差函数不同，导致单词聚集的方式也不同。-->
+
+> 学习的过程就是建立一个损失函数，然后将它最小化。
+
+## 11.15 单词类比
+
+- Example
+
+  ```python
+  king = [0.6, 0.1]
+  man = [0.5, 0.0]
+  woman = [0.0, 0.8]
+  queen = [0.1, 1.0]
+  
+  king - man = [0.1, 0.1]
+  queen - woman = [0.1, 0.2]
+  ```
+
+  预测结果就是king，man；queen，woman之间的关系是相似的。
+
+- Implementation
+
+  ```python
+  def analogy(position = ['terrible','good'],negative = ['bad']):
+    
+    norms = np.sum(weights_0_1 * weights_0_1, axis = 1)
+    norms.resize(norms.shape[0],1)
+    
+    normed_weights = weights_0_1 * norms
+    
+    query_vect = np.zeros(len(weights_0_1[0]))
+    for word in positive:
+      query_vect += normed_weights[word2index[word]]
+    for word in negative:
+      query_vect -= normed_weights[word2index[word]]
+      
+    scores = Counter()
+    for word, index in word2index.items():
+      raw_difference = weights_0_1[index] - query_vect
+      squared_difference = raw_difference * raw_difference
+      scores[word] = -math.sqrt(sum(squared_difference))
+    
+    return scores.most_common(10)[1:]
+  ```
