--- a/Java/七.集合框架.md
+++ b/Java/七.集合框架.md
@@ -1,3 +1,5 @@
+3.map的**toArray()**方法
+
 # 七.集合框架
 
 ## 1. Java集合框架
@@ -138,7 +140,7 @@
     2.需要使用set方法来修改值。
     ```
   
-    
+  - 一般只允许一个迭代器读取和修改集合。
 
 ### 1.5 集合框架中的接口
 
@@ -467,6 +469,7 @@
   - add(index, E) 添加元素，在第几个元素后面插入，后面的元素需要向后移动，复杂度O(n）
   - remove（）删除元素，后面的元素需要逐个移动，复杂度O（n）
   - 因此一般不进行在中间的添加和删除操作
+  - 遍历一般使用for(int)，而不使用迭代器
 
 - 方法
 
@@ -670,7 +673,38 @@
 - Vector与ArrayList的remove,add(index,obj)方法都会导致内部数组进行数据拷贝的操作，这样在大数据量时，可能会影响效率。
 - Vector与ArrayList的add(obj)方法，如果新增的有效元素个数超过数组本身的长度，都会导致数组进行扩容。
 
-### 2.3 散列集
+### 2.3 Set
+
+- 规则
+
+  - **存储自定义类，需要重写hashcode()和equals()方法。**
+
+    <!--存储时需要调用hashcode方法计算存储位置；如果存储位置有元素，则比较的地址，因此需要重写equals方法-->
+
+- 方法
+
+  ```java
+  public interface Set<T> extends Collection<T>{ 
+    // Basic Operations
+    int size();
+  	boolean isEmpty();
+    boolean contains(Object element); 
+    boolean add(T element);
+    boolean remove(Object element);
+    // Iteration
+    Iterator<T> iterator();
+    // Bulk Operations
+    boolean containsAll(Collection<?> c); 
+    boolean addAll(Collection<? extends T> c); 
+    boolean removeAll(Collection<?> c); 
+    boolean retainAll(Collection<?> c);
+    void clear();
+    // Array Operations
+    Object[] toArray();
+    <T> T[] toArray(T[] a); }
+  ```
+
+  
 
 - 散列码 定义：散列表为每个对象计算的一个整数，是由对象的实例域产生的
 
@@ -706,7 +740,7 @@
 
 - HashSet里面有一个HashMap（适配器模式）
 
-### 2.4 树集
+### 2.4 TreeSet
 
 - 特点：类似散列集，但有序
 
@@ -733,6 +767,18 @@
   
   ```
 
+- 方法
+
+  ```java
+public interface SortedSet<T> extends Set<T> {
+  	T first(); 
+	T last();
+  	SortedSet<T> headSet(T to); 
+  	SortedSet<T> subSet(T from, T to); 
+  	SortedSet<T> tailSet(T from);
+  	Comparator<? super E> comparator(); }
+  ```
+  
 - 注意
 
   - 使用树集，必须能够比较元素。必须实现Comparable接口，或者构造集时提供一个Comparator
@@ -777,6 +823,8 @@
     ```
 
   - 树集的排序是全序，保证任意元素可比性
+
+  - HashSet的缺点是需要大量的memory
 
 - 树集和散列集的取舍
 
@@ -1303,6 +1351,22 @@
      
      ```
 
+### 2.8 小结（包括HashSet,TreeSet使用场景）
+
+- 如果需要按内容访问集合的元素，则HashSet和TreeSet是合适的
+- HashSet的缺点是需要大量的memory
+- HashSet计算hashcode值作为索引
+- TreeSet存储的元素是有序的，需要实现Comparable接口
+- 自定义类存储在HashSet需要重写hashcode()和equals()方法
+- Map的使用场景：频繁查询，增加和删除特定元素
+- ArrayList的使用场景：频繁遍历，中间删除和增加操作较少
+- 选择集合类型需要考虑的内容
+  - Whether the collection is *fixed size* or *dynamic*
+  - Whether it has a *natural order* or *not*
+  - Whether we want to *insert/delete at arbitrary places*, or *only at the start or end*
+  - Whether we want to be able to *search through a large amount of data very quickly*
+  - Whether we want *random access* to elements or sequential access
+
 ## 3. 映射
 
 - 映射（map） 定义：存放键/值对的一种数据结构
@@ -1312,14 +1376,15 @@
 - 规则
 
   - 键必须唯一
+  - **键类型是自定义类型，则需要重写hashcode()和equals()方法**
   - 添加：put( ),必须提供键
   - 检索：get( ),必须使用一个键
   - 替换：put( )，同时会返回被替换的值
   - 删除：remove( )
-  - 元素数量统计：size( )
-
-  <!--实现-->
-
+- 元素数量统计：size( )
+  
+<!--实现-->
+  
   ```java
   // 方法实现
   public class TestHashMap {
@@ -1378,21 +1443,52 @@
   */
   
   ```
+  
+  ```java
+  // 对象类——unimportant
+    public class Employee {
+        private String name;
+    
+        Employee(String name) {
+            this.name = name;
+        }
+    
+        @Override public String toString() {
+            return "Employee{" + "name='" + name + '\'' + '}';
+        }
+    }
+  ```
+  
+- 方法
 
-```
-// 对象类——unimportant
-  public class Employee {
-      private String name;
-  
-      Employee(String name) {
-          this.name = name;
-      }
-  
-      @Override public String toString() {
-          return "Employee{" + "name='" + name + '\'' + '}';
-      }
+  ```java
+  public interface Map<K, V> {
+    // Basic Operations
+    V put(K key, V value);
+  	V get(Object key);
+  	V remove(Object key);
+    boolean containsKey(Object key); 
+    boolean containsValue(Object value);
+    int size();
+    boolean isEmpty();
+    // Bulk Operations
+    void putAll(Map<? extends K, ? extends V> t);
+  	void clear();
+    // Collection views
+    public Set<K> keySet();
+    public Collection<V> values();
+    public Set<Map.Entry<K,V>> entrySet();
   }
-```
+  ```
+
+  ```java
+  // Interface for entrySet elements
+  public interface Entry<K,V> { 
+    K getKey();
+    V getValue();
+    V setValue(V value);
+  }
+  ```
 
 ### 3.2 更新映射项
 
