--- a/Neural Network/11.自然语言的神经网络.md
+++ b/Neural Network/11.自然语言的神经网络.md
@@ -14,6 +14,22 @@
 
 - Purpose：神经网络旨在寻找输入和输出层之间的相关性。
 
+### 词嵌入
+
+- Definition：把维数是所有词的高维空间嵌入到一个维数低得多的连续向量空间中，每个单词或词组被映射为实数域上的向量。
+
+  比如单词cat在词袋中对应的位置值所对应的权重矩阵的那一列。
+
+  <!--一个单词在算法中的存储形式-->
+
+- Application
+
+  - 单词类比。通过比较词嵌入的向量各个点的差距计算欧氏距离来寻找近义词。
+
+- Method：Word2vec，GloVe
+
+- Principle：基于词义分布理论 distributional hypothesis 来构建的（即某些词如果出现于相同上下文中则它们可能具有相同或类似的意义）
+
 ### One-hot编码
 
 - Rules
@@ -21,6 +37,10 @@
   - 行向量表示每一条语句。
   - 列向量表示语句中是否含有特定单词。
   - 如果一条语句中重复性出现单词，可以求和也可以只取一次结果。
+
+- Disadvantage 
+
+  - 每个单词彼此独立，实际情况是部分单词有较强的相关性。比如buy和bought。
 
 - Example
 
